--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ nav{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
+    max-width: 100vw;
 }
 
 nav, #nav-items{
@@ -85,9 +86,10 @@ nav #nav-items{
 
 #main{
     /* margin-top: 7vh; */
-    background-color: rgb(0, 3, 9);
+    background-color: #000109;
     color: rgb(255, 255, 255);
     min-height: 100vh;
+    width: 100%;
 }
 
                                 /*************  SECTION HOME **************/
@@ -370,6 +372,10 @@ padding-top: 7vh;
 #santa #santa-bottom{
     min-height: 100vh;
     width: 100%;
+    font-family: var(--text-font);
+    color: #FFD700;
+    font-size: 1.5rem;
+    text-align: center;
 }
 
 #santa #santa-bottom #container-img-santa{
@@ -386,37 +392,24 @@ padding-top: 7vh;
     filter: grayscale(0.3);
 }
 
-#santa #santa-bottom{
-    font-family: var(--text-font);
-    color: #FFD700;
-    font-size: 1.5rem;
-    text-align: center;
-}
-
 #santa #surprise{
-    min-height: 100vh;
-    width: 100%;
-    border: 1px solid green;
-}
-
-#santa #surprise{
-    height: 100vh;
+    height: 70vh;
     width: 100%;
     position: relative;
-
+    overflow: hidden;
 }
 
-#snow1{
+#snowflake1{
     position: absolute;
     top: 0;
-    left: 20px;
+    left: 5%;
     height: 50px;
     width: 50px;
     background: url(../img/snowflake.png);  
     background-repeat: no-repeat;
     background-size: cover;  
-    animation: animateSnow 5s linear infinite;
-    z-index: 888;
+    animation: animateSnow 8s linear infinite;
+    z-index: 1;
 }
 
 @keyframes animateSnow
@@ -428,6 +421,368 @@ padding-top: 7vh;
     100%
     {
         top:  100%;
-        left: 60px;
+        left: 25%;
     }
+}
+
+#snowflake2{
+    position: absolute;
+    top: 0;
+    left: 25%;
+    height: 50px;
+    width: 50px;
+    background: url(../img/snowflake.png);  
+    background-repeat: no-repeat;
+    background-size: cover;  
+    animation: animateSnow2 10s linear infinite;
+    z-index: 1;
+}
+
+@keyframes animateSnow2
+{
+    0%
+    {
+        top: 0 0;
+    }
+    100%
+    {
+        top:  100%;
+        left: 15%;
+    }
+}
+
+#snowflake3{
+    position: absolute;
+    top: 0;
+    right: 10%;
+    height: 50px;
+    width: 50px;
+    background: url(../img/snowflake.png);  
+    background-repeat: no-repeat;
+    background-size: cover;  
+    animation: animateSnow3 10s linear infinite;
+    z-index: 1;
+}
+
+@keyframes animateSnow3
+{
+    0%
+    {
+        top: 0 0;
+    }
+    100%
+    {
+        top:  100%;
+        right: 35%;
+    }
+}
+
+#snowflake4{
+    position: absolute;
+    top: 0;
+    right: 45%;
+    height: 50px;
+    width: 50px;
+    background: url(../img/snowflake.png);  
+    background-repeat: no-repeat;
+    background-size: cover;  
+    animation: animateSnow4 7s linear infinite;
+    z-index: 1;
+}
+
+@keyframes animateSnow4
+{
+    0%
+    {
+        top: 0 0;
+    }
+    100%
+    {
+        top:  100%;
+        right: 35%;
+    }
+}
+
+#snowflake5{
+    position: absolute;
+    top: 0;
+    right: 15%;
+    height: 50px;
+    width: 50px;
+    background: url(../img/snowflake.png);  
+    background-repeat: no-repeat;
+    background-size: cover;  
+    animation: animateSnow5 9.5s linear infinite;
+    z-index: 1;
+}
+
+@keyframes animateSnow5
+{
+    0%
+    {
+        top: 0 0;
+    }
+    100%
+    {
+        top:  100%;
+        right: 2%;
+    }
+}
+
+#snowflake6{
+    position: absolute;
+    top: 0;
+    right: 55%;
+    height: 50px;
+    width: 50px;
+    background: url(../img/snowflake.png);  
+    background-repeat: no-repeat;
+    background-size: cover;  
+    animation: animateSnow6 9s linear infinite;
+    z-index: 1;
+}
+
+@keyframes animateSnow6
+{
+    0%
+    {
+        top: 0 0;
+    }
+    100%
+    {
+        top:  100%;
+        right: 50%;
+    }
+}
+
+#santa #surprise #snowman{
+    position: absolute;
+    height: 70%;
+    width: 50%;
+    left: 25%;
+    bottom: 0;
+    /* border: 1px solid red; */
+}
+
+#santa #surprise #snowman img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.burger {
+    display: none;
+}
+
+
+                        /* RESPONSIVE */
+
+
+/*Tablette*/
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+    #home{
+        background-position: 80% 20%;
+    }
+    
+    #home h1{
+        font-size: 3.1rem;
+    }
+    
+
+    #christmas #christmas-main{
+        flex-direction: column;
+    }
+
+    #christmas #christmas-main #christmas-paragraph{
+        width: 80%;
+    }
+
+    #christmas #christmas-main #christmas-img{
+        width: 90%;
+    }
+
+    #tradition #container-traditions{
+        flex-direction: column;
+        gap: 100px;
+    }
+
+    #santa #santa-bottom{
+        width: 80%;
+    }
+
+    .burger {
+        display: none;
+    }
+    
+
+}
+
+/*Smartphone*/
+
+@media screen and (max-width: 728px) {
+
+    #home{
+        background-position: 80% 20%;
+    }
+    
+    #home h1{
+        font-size: 1.8rem;
+    }
+
+    #snow1,#snow2{
+        font-size: 2.5rem;
+    }
+    
+     #home #container-title #snow1{
+        top: -2.5rem;
+        left: -1.5rem;
+    }
+    
+    #home #container-title #snow2{
+        bottom: -2.5rem;
+        right: -1.5rem;
+    }
+     
+    #christmas #christmas-main{
+        flex-direction: column;
+    }
+
+    #christmas #title-christmas{
+        margin-top: 5vh;
+        position: relative;
+    }
+    
+    #christmas h2,
+    #tradition h2,
+    #santa h2{
+        font-size: 3.9rem;
+    }
+    
+    #christmas #title-christmas i{
+        font-size: 3.9rem;
+    }
+    
+    #christmas #title-christmas #tree1,
+    #tradition #title-tradition #candy1,
+    #santa #title-santa #gift1{
+        left: -4rem;
+    }
+    
+    #christmas #title-christmas #tree2,
+    #tradition #title-tradition #candy2,
+    #santa #title-santa #gift2{
+        right: -4rem;
+    }
+
+    #christmas #christmas-main #christmas-paragraph{
+        width: 90%;
+    }
+
+    #christmas #christmas-main #christmas-img{
+        width: 100%;
+    }
+
+    #christmas #christmas-main #christmas-img img{
+        object-position: -60px;
+    }
+
+    #tradition #container-traditions{
+        flex-direction: column;
+        gap: 100px;
+    }
+
+    #tradition #container-traditions .traditions{
+        width: 300px;
+    }
+    
+    #tradition #container-traditions .traditions .img-container{
+        width: 100%;
+        height: 300px;
+    }
+
+    #santa #santa-bottom #container-img-santa{
+        width: 90%;
+    }
+
+    nav{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    nav #nav-items {
+        flex-direction: column;
+        height: auto;
+        margin-top: 0;
+        top: 0;
+        position: absolute;
+        transform: translateY(-250px);
+    }
+
+    /*Menu burger*/
+    .burger {
+        display: block;
+        position: relative;
+        width: 45px;
+        height: 45px;
+        border: none;
+        background: transparent;
+        cursor: pointer;
+    }
+
+    .bar-burger {
+        display: block;
+        width: 45px;
+        height: 4px;
+        border-radius: 3px;
+        background: rgb(255, 255, 255);
+        transition: all .5s ease-in-out;
+    }
+
+    .bar-burger::before,
+    .bar-burger::after {
+        content: "";
+        width: 45px;
+        height: 4px;
+        position: absolute;
+        left: 0;
+        background: rgb(255, 255, 255);
+        border-radius: 3px;
+        transition: all .5s ease-in-out;
+    }
+
+
+    /*Ici on indique à combien de pixels se trouvent les barres du dessous et du dessus*/
+    .bar-burger::before {
+        transform: translateY(-12px)
+    }
+
+    .bar-burger::after {
+        transform: translateY(12px)
+    }
+
+    nav{
+        background-color: black;
+    }
+
+        /*Cette class show-nav a été ajoutée à partir du code JS, elle permet de réafficher les éléments (placés auparavant dans la partie non visible de l'écran en haut*/
+        .show-nav #nav-items {
+            /*Il faut à nouveau ajouter la couleur de fond car sinon les éléments sortent du flux (=ils sortent du menu)*/
+            background-color: black;
+            /*La taille que prennent  les éléments par rapport à la largeur du viewport*/
+            width: 100vw;
+            height: 100vh;
+            /*On remet les éléments à leur place d'origine*/
+            transform: translateY(0);
+            transition: 2s;
+        }
+    
+        .show-nav .burger {   
+            transition: 2s;
+        }
+
+
 }
